--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="projects-right">
                     <div class="right-header">
 
-                        <h4>Here you can see the list of Madina Rustaova's projects:</h4>
+                        <h4>Here you can see the list of Madina Rustamova's projects:</h4>
                     </div>
 
                     <div class="right-body">
