--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="right-body-list">
 
-                                <a class="btnA" target="_blank" href="https://rmadina.github.io/MyFirstWebPage-/">To See
+                                <a class="btnA" target="_blank" href="#">To See
                                     More</a>
 
 
@@ -139,7 +139,7 @@
                             </div>
                             <div class="right-body-list">
 
-                                <a class="btnA" target="_blank" href="https://rmadina.github.io/MyFirstWebPage-/">To See
+                                <a class="btnA" target="_blank" href="#">To See
                                     More</a>
 
 
